# omadlp

./: Cargo.toml  README.md
src/: app.rs  main.rs  state.rs  style.rs  theme.rs
src/components/: format_selector.rs  mod.rs  progress_card.rs  sidebar.rs  url_input.rs
src/engine/: download.rs  format.rs  metadata.rs
src/persistence/: history.rs  settings.rs
src/screens/: history.rs  home.rs  settings.rs
