[package]
name = "omadlp"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = "0.14.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
log = "0.4"
env_logger = "0.11"
rfd = "0.15"
open = "5"
